plugins/kotlin/idea/tests/testData/multiModuleLineMarker/fromExpectedSecondaryConstructor/common/common.kt
expect class <!LINE_MARKER("descr='Has actuals in jvm module'")!>SecondaryConstructor<!>{
    <!LINE_MARKER("descr='Has actuals in jvm module'")!>constructor<!>(name: String, surname: String)
}
